# workflow-capacity

./: .gitignore  README.md  capacity_comparison.html  index.html  pyproject.toml  requirements.txt  simulation_results.json
.github/workflows/: deploy-comparison-page.yml
config/: capacity.example.yml
data/: simulation_results.json
notebooks/: capacity_explorer.ipynb  generate_comparison_page.ipynb
scripts/: comparison_page.js  export_comparison_data.py  sync_comparison_html.py
workflow_capacity/: __init__.py  augment.py  bottleneck.py  cache.py  collect.py  compare.py  config.py  export_comparison.py  log.py  metrics.py  pool.py  pr_check.py  pr_classify.py  sharding.py  simulate.py
